--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,9 +46,15 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation 'com.google.code.gson:gson:2.8.9'
-    //bmob相关依赖
 
+    implementation 'com.google.code.gson:gson:2.8.9'
+
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
+    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+
+    //bmob相关依赖
     implementation 'io.github.bmob:android-sdk:3.8.21'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
