--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ android {
 
 dependencies {
 
+
+    //一堆不知道干啥用的
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
@@ -46,12 +48,14 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-
+    //json库
     implementation 'com.google.code.gson:gson:2.8.9'
 
+    //图片处理库
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
+    //应该没用。。。。？
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 
     //bmob相关依赖
