--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ android {
 }
 
 dependencies {
-
+    implementation 'com.github.xujiaji:happy-bubble:1.2.5'
 
     //一堆不知道干啥用的
     implementation 'androidx.appcompat:appcompat:1.4.1'
@@ -65,6 +65,8 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.8.1'
     implementation 'com.squareup.okio:okio:2.2.2'
     implementation 'com.google.code.gson:gson:2.8.5'
+
+
 
 
 }
