--- a/settings.gradle
+++ b/settings.gradle
@@ -11,6 +11,7 @@ dependencyResolutionManagement {
         google()
         mavenCentral()
         maven {url 'https://dl.bintray.com/chaozhouzhang/maven'}
+        maven { url 'https://jitpack.io' }
     }
 }
 rootProject.name = "TodaySchedule"
